[package]
name = "nzyme-util"
license = "SSPL-1.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.profiler]
inherits = "release"
debug = true

[package.metadata.deb]
maintainer = "Nzyme LLC <hello@nzyme.org>"
copyright = "Nzyme LLC <hello@nzyme.org>"
license-file = ["COPYING", "0"]
extended-description = "The Nzyme Utility Command"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/nzyme-util", "usr/bin/nzyme-util", "755"],
    ["README.md", "usr/share/doc/nzyme-util/README", "644"]
]
conf-files = []

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rusb = "0.9"
udev = "0.8"
unicode-width = "0.1"
serialport = "4.8.1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4.28"