[package]
name = "nzyme-util"
license = "SSPL-1.0"
version = "2.0.0-alpha.18-SNAPSHOT"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.profiler]
inherits = "release"
debug = true

[package.metadata.deb]
maintainer = "Nzyme LLC <hello@nzyme.org>"
copyright = "Nzyme LLC <hello@nzyme.org>"
license-file = ["COPYING", "0"]
extended-description = "The Nzyme Utility Command"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/nzyme-util", "usr/bin/nzyme-util", "755"],
    ["README.md", "usr/share/doc/nzyme-util/README", "644"]
]
conf-files = []

[dependencies]
ratatui = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
anyhow = "1.0.102"
rusb = "0.9.4"
udev = "0.9.3"
serialport = "4.9.0"
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = { version = "2.2", features = ["rand_core", "digest"] }
sha2 = "0.10"
base64 = "0.22.1"