[package]
name = "nzyme-tap"
description = "The nzyme Network Defense System tap"
license = "SSPL-1.0"
version = "2.0.0-alpha.11-SNAPSHOT"
edition = "2021"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.profiler]
inherits = "release"
debug = true

[package.metadata.deb]
maintainer = "Lennart Koopmann <lennart.koopmann@nzyme.org>"
copyright = "nzyme LLC <lennart.koopmann@nzyme.org>"
license-file = ["COPYING", "0"]
extended-description = "The nzyme Network Defense System tap"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/nzyme-tap", "usr/bin/nzyme-tap", "755"],
    ["nzyme-tap.conf.example", "etc/nzyme/nzyme-tap.conf.example", "640"],
    ["nzyme-tap.conf.example", "etc/nzyme/nzyme-tap.conf", "640"],
    ["README.md", "usr/share/doc/nzyme-tap/README", "644"],
    ["packaging/debian/systemd/nzyme-tap.service", "usr/lib/systemd/system/nzyme-tap.service", "644"]
]
conf-files = [
    "etc/nzyme/nzyme-tap.conf"
]

[dependencies]
hex = "0.4.3"
pcap = "0.10.1"
byteorder = "1.4.3"
log = "0.4.0"
fern = { version = "0.6.1", features = ["colored"] }
anyhow = "1.0.53"
crossbeam-channel = "0.5.2"
reqwest = { version = "0.11.26", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0.136", features = ["derive"] }
systemstat = "0.1.10"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.24.0"
strum_macros = "0.24"
bitreader = "0.3.6"
bitvec = "1.0.0"
entropy = "0.4.1"
clokwerk = "0.3.5"
clap = { version = "4.3.19", features = ["derive"] }
toml = "0.7.3"
caps = "0.5.5"
sha2 = "0.10"
neli = "0.7.0-rc2"
rand = "0.8.5"
serde_json = "1.0.104"
libc = "0.2.147"
regex = "1.10.3"
metrics = "0.22.3"
statrs = "0.16.0"