[package]
name = "nzyme-tap"
license = "SSPL-1.0"
version = "2.0.0-alpha.18-SNAPSHOT"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.profiler]
inherits = "release"
debug = true

[package.metadata.deb]
maintainer = "Nzyme LLC <hello@nzyme.org>"
copyright = "Nzyme LLC <hello@nzyme.org>"
license-file = ["COPYING", "0"]
extended-description = "The Nzyme tap"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/nzyme-tap", "usr/bin/nzyme-tap", "755"],
    ["nzyme-tap.conf.example", "etc/nzyme/nzyme-tap.conf.example", "640"],
    ["nzyme-tap.conf.example", "etc/nzyme/nzyme-tap.conf", "640"],
    ["README.md", "usr/share/doc/nzyme-tap/README", "644"],
    ["packaging/debian/systemd/nzyme-tap.service", "usr/lib/systemd/system/nzyme-tap.service", "644"]
]
conf-files = [
    "etc/nzyme/nzyme-tap.conf"
]

[dependencies]
pcap = "2.4.0"
byteorder = "1.4.3"
log = "0.4.0"
fern = { version = "0.7.1", features = ["colored"] }
anyhow = "1.0.53"
crossbeam-channel = "0.5.2"
reqwest = { version = "0.13.2", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0.136", features = ["derive"] }
systemstat = "0.2.6"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
bitreader = "0.3.6"
bitvec = "1.0.0"
entropy = "0.4.1"
clokwerk = "0.4.0"
clap = { version = "4.3.19", features = ["derive"] }
toml = "1.1.2"
caps = "0.5.5"
sha2 = "0.11.0"
neli = "0.7.0-rc2"
rand = "0.10.0"
serde_json = "1.0.104"
libc = "0.2.147"
regex = "1.10.3"
statrs = "0.18.0"
psl = "2"
dbus = "0.9.7"
base64 = "0.22.1"
cidr = "0.3.2"
pnet = "0.35.0"
uuid = { version = "1.13.1", features = ["v4"] }
serialport = "4.7.2"
rusb = "0.9"
udev = "0.9.3"

[features]
fuzzing = []