[package]
name = "nzyme-firmware-updater"
license = "SSPL-1.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.profiler]
inherits = "release"
debug = true

[package.metadata.deb]
maintainer = "Nzyme LLC <hello@nzyme.org>"
copyright = "Nzyme LLC <hello@nzyme.org>"
license-file = ["COPYING", "0"]
extended-description = "The Nzyme peripherals firmware updater"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/nzyme-firmware-updater", "usr/bin/nzyme-firmware-updater", "755"],
    ["README.md", "usr/share/doc/nzyme-firmware-updater/README", "644"]
]
conf-files = []

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rusb = "0.9"
udev = "0.8"
unicode-width = "0.1"